修改文件路径

--- a/src/main/webapp/Views/CKchuangkequan/share.html
+++ b/src/main/webapp/Views/CKchuangkequan/share.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>创客圈</title>
     <link rel="stylesheet" type="text/css" href="/styles/swiper-3.3.1.min.css"/>
-    <link rel="stylesheet" type="text/css" href="../../chuangkestyles/CKchuangkequan/share.css"/>
-	<script src="../../chuangkescripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../../chuangkescripts/swiper-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../../chuangkescripts/layout.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../../chuangkescripts/CKchuangkequan/share.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href=/styles/CKchuangkequan/share.css"/>
+	<script src="/scripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/scripts/swiper-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/scripts/chuangkescripts/layout.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/scripts/CKchuangkequan/share.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 	<!--<div class="zhezhao">		
@@ -29,7 +29,7 @@
 					<div class="conter_seconed conter_css">
 						<div class="seconed_p">
 							<div class="head_img" style="float:left">
-								<img  id="head_img" src="../../chuangkefiles/CKchuangkequan/img/touxiang.png"/>
+								<img  id="head_img" src="/files/CKchuangkequan/img/touxiang.png"/>
 							</div>
 							<ul class="seconed_div" style="float:left">
 									<li class="li_name" id="li_name"> 李浩生</li>				
@@ -44,16 +44,16 @@
 								今天给一台宾利欧陆做了一次小保养，车主表示非常满意！	！
 						</p>
 						<ul class="ul_miaos" id="miaoshu">
-							<li><img src="../../chuangkefiles/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
-							<li><img src="../../chuangkefiles/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
-							<li><img src="../../chuangkefiles/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
-							<li><img src="../../chuangkefiles/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
 						</ul>
 			
 						<div class="plun">
-							<span><img class="fengxiang" src="../../chuangkefiles/CKchuangkequan/img/fengixnag.png"><font class="lileibie" id="fengxiang">分享</font></span>
-							<span><img class="zan" src="../../chuangkefiles/CKchuangkequan/img/zan.png"><font class="lileibie" id="zan">攒</font></span>
-							<span><img class="ping" src="../../chuangkefiles/CKchuangkequan/img/pinglun.png"><font class="lileibie" id="ping">评论</font></span>
+							<span><img class="fengxiang" src="/files/CKchuangkequan/img/fengixnag.png"><font class="lileibie" id="fengxiang">分享</font></span>
+							<span><img class="zan" src="/files/CKchuangkequan/img/zan.png"><font class="lileibie" id="zan">攒</font></span>
+							<span><img class="ping" src="/files/CKchuangkequan/img/pinglun.png"><font class="lileibie" id="ping">评论</font></span>
 						    
 						</div>
 						
@@ -67,7 +67,7 @@
 					<div class="conter_seconed conter_css">
 						<div class="seconed_p">
 							<div class="head_img" style="float:left">
-								<img  id="head_img" src="../../chuangkefiles/CKchuangkequan/img/touxiang.png"/>
+								<img  id="head_img" src="/files/CKchuangkequan/img/touxiang.png"/>
 							</div>
 							<ul class="seconed_div" style="float:left">
 									<li class="li_name" id="li_name"> 李浩生</li>				
@@ -78,21 +78,20 @@
 							</ul>
 						</div>
 					
-						<p class="p_miaos">				
+						<p class="p_miaos">
 								今天给一台宾利欧陆做了一次小保养，车主表示非常满意！	！
 						</p>
 						<ul class="ul_miaos" id="miaoshu">
-							<li><img src="../../chuangkefiles/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
-							<li><img src="../../chuangkefiles/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
-							<li><img src="../../chuangkefiles/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
-							<li><img src="../../chuangkefiles/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
 						</ul>
 			
 						<div class="plun">
-							<span><img class="fengxiang" src="../../chuangkefiles/CKchuangkequan/img/fengixnag.png"><font class="lileibie" id="fengxiang">分享</font></span>
-							<span><img class="zan" src="../../chuangkefiles/CKchuangkequan/img/zan.png"><font class="lileibie" id="zan">攒</font></span>
-							<span><img class="ping" src="../../chuangkefiles/CKchuangkequan/img/pinglun.png"><font class="lileibie" id="ping">评论</font></span>
-						    
+							<span><img class="fengxiang" src="/files/CKchuangkequan/img/fengixnag.png"><font class="lileibie" id="fengxiang">分享</font></span>
+							<span><img class="zan" src="/files/CKchuangkequan/img/zan.png"><font class="lileibie" id="zan">攒</font></span>
+							<span><img class="ping" src="/files/CKchuangkequan/img/pinglun.png"><font class="lileibie" id="ping">评论</font></span>
 						</div>
 						
 					
@@ -105,7 +104,7 @@
 					<div class="conter_seconed conter_css">
 						<div class="seconed_p">
 							<div class="head_img" style="float:left">
-								<img  id="head_img" src="../../chuangkefiles/CKchuangkequan/img/touxiang.png"/>
+								<img  id="head_img" src="/files/CKchuangkequan/img/touxiang.png"/>
 							</div>
 							<ul class="seconed_div" style="float:left">
 									<li class="li_name" id="li_name"> 李浩生</li>				
@@ -120,16 +119,16 @@
 								今天给一台宾利欧陆做了一次小保养，车主表示非常满意！	！
 						</p>
 						<ul class="ul_miaos" id="miaoshu">
-							<li><img src="../../chuangkefiles/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
-							<li><img src="../../chuangkefiles/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
-							<li><img src="../../chuangkefiles/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
-							<li><img src="../../chuangkefiles/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
 						</ul>
 			
 						<div class="plun">
-							<span><img class="fengxiang" src="../../chuangkefiles/CKchuangkequan/img/fengixnag.png"><font class="lileibie" id="fengxiang">分享</font></span>
-							<span><img class="zan" src="../../chuangkefiles/CKchuangkequan/img/zan.png"><font class="lileibie" id="zan">攒</font></span>
-							<span><img class="ping" src="../../chuangkefiles/CKchuangkequan/img/pinglun.png"><font class="lileibie" id="ping">评论</font></span>
+							<span><img class="fengxiang" src="/files/CKchuangkequan/img/fengixnag.png"><font class="lileibie" id="fengxiang">分享</font></span>
+							<span><img class="zan" src="/files/CKchuangkequan/img/zan.png"><font class="lileibie" id="zan">攒</font></span>
+							<span><img class="ping" src="/files/CKchuangkequan/img/pinglun.png"><font class="lileibie" id="ping">评论</font></span>
 						    
 						</div>
 						
