--- a/src/main/webapp/Views/CKgrab_site/grab_site1.html
+++ b/src/main/webapp/Views/CKgrab_site/grab_site1.html
@@ -5,12 +5,12 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>抢地盘</title>
 		<!--引入CSS-->
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/ckwx.css"/>
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/CKgrab_site/grab_site.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/ckwx.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/CKgrab_site/grab_site.css"/>
 		<!--引入JS-->
-		<script src="../../chuangkescripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkescripts/layout.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkescripts/CKgrab_site/grab_site.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/layout.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/CKgrab_site/grab_site.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
 		<div id="wrap">
@@ -53,7 +53,7 @@
 					<li>
 						<span class="label">门店地址</span>
 						<input type="text" value="山东省济南市高新区顺泰广场2号楼3层B1" name="add" class="input width_2"/>
-						<img src="../../chuangkefiles/CKgrab_site/dt.png" alt="" class="dt"/>
+						<img src="/files/CKgrab_site/dt.png" alt="" class="dt"/>
 					</li>
 					<li>
 						<div class="l_l">
