--- a/src/main/webapp/Views/CKgrab_site/grab_site2.html
+++ b/src/main/webapp/Views/CKgrab_site/grab_site2.html
@@ -5,12 +5,12 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>抢地盘</title>
 		<!--引入CSS-->
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/ckwx.css"/>
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/CKgrab_site/grab_site.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/ckwx.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/CKgrab_site/grab_site.css"/>
 		<!--引入JS-->
-		<script src="../../chuangkescripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkescripts/layout.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkescripts/CKgrab_site/grab_site.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/layout.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/CKgrab_site/grab_site.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
 		<div id="wrap">
@@ -20,26 +20,26 @@
 					<p class="titles">上传照片</p>
 					<ul>
 						<li>
-							<input type="file" / class="file">
-							<img src="../../chuangkefiles/CKpersonal_center/sc.png" class="sc"/>
+							<input type="file" class="file" />
+							<img src="/files/CKpersonal_center/sc.png" class="sc"/>
 							<img src="" class="file_img"/>
 							<p class="text font_1">门头照</p>
 						</li>
 						<li class="margin_L">
-							<input type="file" / class="file">
-							<img src="../../chuangkefiles/CKpersonal_center/sc.png" class="sc"/>
+							<input type="file" class="file"/>
+							<img src="/files/CKpersonal_center/sc.png" class="sc"/>
 							<img src="" class="file_img"/>
 							<p class="text font_1">宣传海报</p>
 						</li>
 						<li class="margin_L">
-							<input type="file" / class="file">
-							<img src="../../chuangkefiles/CKpersonal_center/sc.png" class="sc"/>
+							<input type="file"  class="file"/>
+							<img src="/files/CKpersonal_center/sc.png" class="sc"/>
 							<img src="" class="file_img"/>
 							<p class="text font_1">产品堆头</p>
 						</li>
 						<li class="margin_L">
-							<input type="file" / class="file">
-							<img src="../../chuangkefiles/CKpersonal_center/sc.png" class="sc"/>
+							<input type="file"  class="file"/>
+							<img src="/files/CKpersonal_center/sc.png" class="sc"/>
 							<img src="" class="file_img"/>
 							<p class="text font_1">宣传旗</p>
 						</li>
