--- a/src/main/webapp/Views/CKmicro_marketing/micro_marketing.html
+++ b/src/main/webapp/Views/CKmicro_marketing/micro_marketing.html
@@ -5,14 +5,14 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>微营销</title>
 		<!--引入CSS-->
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/ckwx.css"/>
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/swiper-3.3.1.min.css"/>
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/CKmicro_marketing/micro_marketing.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/ckwx.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/swiper-3.3.1.min.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/CKmicro_marketing/micro_marketing.css"/>
 		<!--引入JS-->
-		<script src="../../chuangkestyles/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkestyles/layout.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkestyles/swiper-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkestyles/CKmicro_marketing/micro_marketing.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/layout.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/swiper-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/CKmicro_marketing/micro_marketing.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
 		<div id="wrap">
@@ -31,7 +31,7 @@
 					<div class="swiper-slide">
 						<ul class="box">
 							<li>
-								<img src="../../chuangkefiles/CKmicro_marketing/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_marketing/photo1.png" class="photo"/>
 								<div>
 									<p class="font_3 product_name">净匠—全净界空气净化器</p>
 									<p class="font_1 introduction">为您的车内带来清新自然的空气</p>
@@ -39,13 +39,13 @@
 								</div>
 							</li>
 							<li>
-								<img src="../../chuangkefiles/CKmicro_marketing/photo2.png" class="photo"/>
+								<img src="/files/CKmicro_marketing/photo2.png" class="photo"/>
 								<p class="font_2 product_name">净匠—全净界空气净化器</p>
 								<p class="font_1 introduction">为您的车内带来清新自然的空气</p>
 								<p class="font_1 price">￥88.88</p>
 							</li>
 							<li>
-								<img src="../../chuangkefiles/CKmicro_marketing/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_marketing/photo1.png" class="photo"/>
 								<p class="font_2 product_name">净匠—全净界空气净化器</p>
 								<p class="font_1 introduction">为您的车内带来清新自然的空气</p>
 								<p class="font_1 price">￥88.88</p>
@@ -56,19 +56,19 @@
 					<div class="swiper-slide">
 						<ul class="box">
 							<li>
-								<img src="../../chuangkefiles/CKmicro_marketing/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_marketing/photo1.png" class="photo"/>
 								<p class="font_2 product_name">净匠—全净界空气净化器</p>
 								<p class="font_1 introduction">为您的车内带来清新自然的空气</p>
 								<p class="font_1 price">￥88.88</p>
 							</li>
 							<li>
-								<img src="../../chuangkefiles/CKmicro_marketing/photo2.png" class="photo"/>
+								<img src="/files/CKmicro_marketing/photo2.png" class="photo"/>
 								<p class="font_2 product_name">净匠—全净界空气净化器</p>
 								<p class="font_1 introduction">为您的车内带来清新自然的空气</p>
 								<p class="font_1 price">￥88.88</p>
 							</li>
 							<li>
-								<img src="../../chuangkefiles/CKmicro_marketing/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_marketing/photo1.png" class="photo"/>
 								<p class="font_2 product_name">净匠—全净界空气净化器</p>
 								<p class="font_1 introduction">为您的车内带来清新自然的空气</p>
 								<p class="font_1 price">￥88.88</p>
@@ -79,19 +79,19 @@
 					<div class="swiper-slide">
 						<ul class="box">
 							<li>
-								<img src="../../chuangkefiles/CKmicro_marketing/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_marketing/photo1.png" class="photo"/>
 								<p class="font_2 product_name">净匠—全净界空气净化器</p>
 								<p class="font_1 introduction">为您的车内带来清新自然的空气</p>
 								<p class="font_1 price">￥88.88</p>
 							</li>
 							<li>
-								<img src="../../chuangkefiles/CKmicro_marketing/photo2.png" class="photo"/>
+								<img src="/files/CKmicro_marketing/photo2.png" class="photo"/>
 								<p class="font_2 product_name">净匠—全净界空气净化器</p>
 								<p class="font_1 introduction">为您的车内带来清新自然的空气</p>
 								<p class="font_1 price">￥88.88</p>
 							</li>
 							<li>
-								<img src="../../chuangkefiles/CKmicro_marketing/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_marketing/photo1.png" class="photo"/>
 								<p class="font_2 product_name">净匠—全净界空气净化器</p>
 								<p class="font_1 introduction">为您的车内带来清新自然的空气</p>
 								<p class="font_1 price">￥88.88</p>
