--- a/src/main/webapp/Views/CKmy_territory/my_territory.html
+++ b/src/main/webapp/Views/CKmy_territory/my_territory.html
@@ -5,14 +5,14 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>我的地盘</title>
 		<!--引入CSS-->
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/ckwx.css"/>
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/swiper-3.3.1.min.css"/>
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/CKmy_territory/my_territory.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/ckwx.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/swiper-3.3.1.min.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/CKmy_territory/my_territory.css"/>
 		<!--引入JS-->
-		<script src="../../chuangkescripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkescripts/layout.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkescripts/swiper-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkescripts/CKmy_territory/my_territory.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/layout.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/swiper-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/CKmy_territory/my_territory.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
 		<div id="wrap">
