--- a/src/main/webapp/Views/CKpurchase/purchase.html
+++ b/src/main/webapp/Views/CKpurchase/purchase.html
@@ -5,12 +5,12 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>我要进货</title>
 		<!--引入CSS-->
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/ckwx.css"/>
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/CKpurchase/purchase.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/ckwx.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/CKpurchase/purchase.css"/>
 		<!--引入JS-->
-		<script src="../../chuangkescripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkescripts/layout.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkescripts/CKpurchase/purchase.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/layout.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/CKpurchase/purchase.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
 		<div id="wrap">
