--- a/src/main/webapp/Views/CKxinxibang/messagebang.html
+++ b/src/main/webapp/Views/CKxinxibang/messagebang.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>信息榜</title>
-    <link rel="stylesheet" type="text/css" href="../../chuangkestyles/ckwx.css"/>
-    <link rel="stylesheet" type="text/css" href="../../chuangkestyles/CKxinxibang/messagebang.css"/>
-	<script src="../../chuangkescripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../../chuangkescripts/layout.js"  type="text/javascript" charset="utf-8"></script>
-	<script src="../../chuangkescripts/CKxinxibang/messagebang.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="/styles/ckwx.css"/>
+    <link rel="stylesheet" type="text/css" href="/styles/CKxinxibang/messagebang.css"/>
+	<script src="/scripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/scripts/layout.js"  type="text/javascript" charset="utf-8"></script>
+	<script src="/scripts/CKxinxibang/messagebang.js" type="text/javascript" charset="utf-8"></script>
 
 </head>
 
@@ -16,7 +16,7 @@
 
 	<div class="conter">
 	    <div class=" conter_css">
-			<span class="messageimg"><img src="../../chuangkefiles/CKxinxibang/messageimg.png"/></span>
+			<span class="messageimg"><img src="/files/CKxinxibang/messageimg.png"/></span>
 			<span class="messageimg messageright">
 				<ul>
 					<li class="message_title font_4">热烈祝贺怡人怡车健康中国行活动正式拉开帷幕！</li>
@@ -26,14 +26,14 @@
 			</span>	
 			<div class="plun">
 
-				<span><img class="fengxiang" src="../../chuangkefiles/chuangkequan/img/fengixnag.png"><font class=" font_2" id="fengxiang">112</font></span>
-				<span><img class="zan" src="../../chuangkefiles/CKxinxibang/xuanzh.png"><font class=" font_2" id="zan">118</font></span>
-				<span><img class="ping" src="../../chuangkefiles/chuangkequan/img/pinglun.png"><font class=" font_2" id="ping">34</font></span>
+				<span><img class="fengxiang" src="/files/CKchuangkequan/img/fengixnag.png"><font class=" font_2" id="fengxiang">112</font></span>
+				<span><img class="zan" src="/files/CKxinxibang/xuanzh.png"><font class=" font_2" id="zan">118</font></span>
+				<span><img class="ping" src="/files/CKchuangkequan/img/pinglun.png"><font class=" font_2" id="ping">34</font></span>
 			    
 			</div>
 		</div>	
 		<div class=" conter_css">
-			<span class="messageimg"><img src="../../chuangkefiles/CKxinxibang/messageimg.png"/></span>
+			<span class="messageimg"><img src="/files/CKxinxibang/messageimg.png"/></span>
 			<span class="messageimg messageright">
 				<ul>
 					<li class="message_title font_4">热烈祝贺怡人怡车健康中国行活动正式拉开帷幕！</li>
@@ -43,14 +43,14 @@
 			</span>	
 			<div class="plun">
 
-				<span><img class="fengxiang" src="../../chuangkefiles/chuangkequan/img/fengixnag.png"><font class=" font_2" id="fengxiang">112</font></span>
-				<span><img class="zan" src="../../chuangkefiles/CKxinxibang/xuanzh.png"><font class=" font_2" id="zan">118</font></span>
-				<span><img class="ping" src="../../chuangkefiles/chuangkequan/img/pinglun.png"><font class=" font_2" id="ping">34</font></span>
+				<span><img class="fengxiang" src="/files/CKchuangkequan/img/fengixnag.png"><font class=" font_2" id="fengxiang">112</font></span>
+				<span><img class="zan" src="/files/CKxinxibang/xuanzh.png"><font class=" font_2" id="zan">118</font></span>
+				<span><img class="ping" src="/files/CKchuangkequan/img/pinglun.png"><font class=" font_2" id="ping">34</font></span>
 			    
 			</div>
 		</div>		
 		<div class=" conter_css">
-			<span class="messageimg"><img src="../../chuangkefiles/CKxinxibang/messageimg.png"/></span>
+			<span class="messageimg"><img src="/files/CKxinxibang/messageimg.png"/></span>
 			<span class="messageimg messageright">
 				<ul>
 					<li class="message_title font_4">热烈祝贺怡人怡车健康中国行活动正式拉开帷幕！</li>
@@ -60,14 +60,14 @@
 			</span>	
 			<div class="plun">
 
-				<span><img class="fengxiang" src="../../chuangkefiles/chuangkequan/img/fengixnag.png"><font class=" font_2" id="fengxiang">112</font></span>
-				<span><img class="zan" src="../../chuangkefiles/chuangkequan/img/zan.png"><font class=" font_2" id="zan">118</font></span>
-				<span><img class="ping" src="../../chuangkefiles/chuangkequan/img/pinglun.png"><font class=" font_2" id="ping">34</font></span>
+				<span><img class="fengxiang" src="/files/CKchuangkequan/img/fengixnag.png"><font class=" font_2" id="fengxiang">112</font></span>
+				<span><img class="zan" src="/files/CKchuangkequan/img/zan.png"><font class=" font_2" id="zan">118</font></span>
+				<span><img class="ping" src="/files/CKchuangkequan/img/pinglun.png"><font class=" font_2" id="ping">34</font></span>
 			    
 			</div>
 		</div>		
 		<div class=" conter_css">
-			<span class="messageimg"><img src="../../chuangkefiles/CKxinxibang/messageimg.png"/></span>
+			<span class="messageimg"><img src="/files/CKxinxibang/messageimg.png"/></span>
 			<span class="messageimg messageright">
 				<ul>
 					<li class="message_title font_4">热烈祝贺怡人怡车健康中国行活动正式拉开帷幕！</li>
@@ -77,9 +77,9 @@
 			</span>	
 			<div class="plun">
 
-				<span><img class="fengxiang" src="../../chuangkefiles/chuangkequan/img/fengixnag.png"><font class=" font_2" id="fengxiang">112</font></span>
-				<span><img class="zan" src="../../chuangkefiles/chuangkequan/img/zan.png"><font class=" font_2" id="zan">118</font></span>
-				<span><img class="ping" src="../../chuangkefiles/chuangkequan/img/pinglun.png"><font class=" font_2" id="ping">34</font></span>
+				<span><img class="fengxiang" src="/files/CKchuangkequan/img/fengixnag.png"><font class=" font_2" id="fengxiang">112</font></span>
+				<span><img class="zan" src="/files/CKchuangkequan/img/zan.png"><font class=" font_2" id="zan">118</font></span>
+				<span><img class="ping" src="/files/CKchuangkequan/img/pinglun.png"><font class=" font_2" id="ping">34</font></span>
 			    
 			</div>
 		</div>		
