--- a/src/main/webapp/Views/CKmicro_classroom/micro_classroom.html
+++ b/src/main/webapp/Views/CKmicro_classroom/micro_classroom.html
@@ -5,14 +5,14 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>微课堂</title>
 		<!--引入CSS-->
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/ckwx.css"/>
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/swiper-3.3.1.min.css"/>
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/CKmicro_classroom/micro_classroom.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/ckwx.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/swiper-3.3.1.min.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/CKmicro_classroom/micro_classroom.css"/>
 		<!--引入JS-->
-		<script src="../../chuangkescripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkescripts/layout.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkescripts/swiper-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkescripts/CKmicro_classroom/micro_classroom.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/layout.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/swiper-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/CKmicro_classroom/micro_classroom.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
 		<div id="wrap">
@@ -32,39 +32,39 @@
 					<div class="swiper-slide">
 						<ul class="box">
 							<li>
-								<img src="../../chuangkefiles/CKmicro_classroom/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
 								<p class="font_3 product_name">净匠—全净界空气净化器使用方法</p>
 								<p class="font_1 introduction">本课程旨在帮助销售人员</p>
 								<p class="font_1 introduction">全面了解此款空气净化剂详细使用方法</p>
 								<div class="font_1 p_d">
 									<div class="trademark">
-										<img src="../../chuangkefiles/CKmicro_classroom/logo.png"/>
+										<img src="/files/CKmicro_classroom/logo.png"/>
 										<span class="p">测试通过</span>
 									</div>
 									<div class="date font_5">发布时间：2017-06-10</div>
 								</div>
 							</li>
 							<li>
-								<img src="../../chuangkefiles/CKmicro_classroom/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
 								<p class="font_3 product_name">净匠—全净界空气净化器使用方法</p>
 								<p class="font_1 introduction">本课程旨在帮助销售人员</p>
 								<p class="font_1 introduction">全面了解此款空气净化剂详细使用方法</p>
 								<div class="font_1 p_d">
 									<div class="trademark">
-										<img src="../../chuangkefiles/CKmicro_classroom/logo.png"/>
+										<img src="/files/CKmicro_classroom/logo.png"/>
 										<span class="p">测试通过</span>
 									</div>
 									<div class="date font_5">发布时间：2017-06-10</div>
 								</div>
 							</li>
 							<li>
-								<img src="../../chuangkefiles/CKmicro_classroom/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
 								<p class="font_3 product_name">净匠—全净界空气净化器使用方法</p>
 								<p class="font_1 introduction">本课程旨在帮助销售人员</p>
 								<p class="font_1 introduction">全面了解此款空气净化剂详细使用方法</p>
 								<div class="font_1 p_d">
 									<div class="trademark">
-										<img src="../../chuangkefiles/CKmicro_classroom/logo.png"/>
+										<img src="/files/CKmicro_classroom/logo.png"/>
 										<span class="p">测试通过</span>
 									</div>
 									<div class="date font_5">发布时间：2017-06-10</div>
@@ -76,39 +76,39 @@
 					<div class="swiper-slide">
 						<ul class="box">
 							<li>
-								<img src="../../chuangkefiles/CKmicro_classroom/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
 								<p class="font_3 product_name">净匠—全净界空气净化器使用方法</p>
 								<p class="font_1 introduction">本课程旨在帮助销售人员</p>
 								<p class="font_1 introduction">全面了解此款空气净化剂详细使用方法</p>
 								<div class="font_1 p_d">
 									<div class="trademark">
-										<img src="../../chuangkefiles/CKmicro_classroom/logo.png"/>
+										<img src="/files/CKmicro_classroom/logo.png"/>
 										<span class="p">测试通过</span>
 									</div>
 									<div class="date font_5">发布时间：2017-06-10</div>
 								</div>
 							</li>
 							<li>
-								<img src="../../chuangkefiles/CKmicro_classroom/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
 								<p class="font_3 product_name">净匠—全净界空气净化器使用方法</p>
 								<p class="font_1 introduction">本课程旨在帮助销售人员</p>
 								<p class="font_1 introduction">全面了解此款空气净化剂详细使用方法</p>
 								<div class="font_1 p_d">
 									<div class="trademark">
-										<img src="../../chuangkefiles/CKmicro_classroom/logo.png"/>
+										<img src="/files/CKmicro_classroom/logo.png"/>
 										<span class="p">测试通过</span>
 									</div>
 									<div class="date font_5">发布时间：2017-06-10</div>
 								</div>
 							</li>
 							<li>
-								<img src="../../chuangkefiles/CKmicro_classroom/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
 								<p class="font_3 product_name">净匠—全净界空气净化器使用方法</p>
 								<p class="font_1 introduction">本课程旨在帮助销售人员</p>
 								<p class="font_1 introduction">全面了解此款空气净化剂详细使用方法</p>
 								<div class="font_1 p_d">
 									<div class="trademark">
-										<img src="../../chuangkefiles/CKmicro_classroom/logo.png"/>
+										<img src="/files/CKmicro_classroom/logo.png"/>
 										<span class="p">测试通过</span>
 									</div>
 									<div class="date font_5">发布时间：2017-06-10</div>
@@ -120,39 +120,39 @@
 					<div class="swiper-slide">
 						<ul class="box">
 							<li>
-								<img src="../../chuangkefiles/CKmicro_classroom/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
 								<p class="font_3 product_name">净匠—全净界空气净化器使用方法</p>
 								<p class="font_1 introduction">本课程旨在帮助销售人员</p>
 								<p class="font_1 introduction">全面了解此款空气净化剂详细使用方法</p>
 								<div class="font_1 p_d">
 									<div class="trademark">
-										<img src="../../chuangkefiles/CKmicro_classroom/logo.png"/>
+										<img src="/files/CKmicro_classroom/logo.png"/>
 										<span class="p">测试通过</span>
 									</div>
 									<div class="date font_5">发布时间：2017-06-10</div>
 								</div>
 							</li>
 							<li>
-								<img src="../../chuangkefiles/CKmicro_classroom/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
 								<p class="font_3 product_name">净匠—全净界空气净化器使用方法</p>
 								<p class="font_1 introduction">本课程旨在帮助销售人员</p>
 								<p class="font_1 introduction">全面了解此款空气净化剂详细使用方法</p>
 								<div class="font_1 p_d">
 									<div class="trademark">
-										<img src="../../chuangkefiles/CKmicro_classroom/logo.png"/>
+										<img src="/files/CKmicro_classroom/logo.png"/>
 										<span class="p">测试通过</span>
 									</div>
 									<div class="date font_5">发布时间：2017-06-10</div>
 								</div>
 							</li>
 							<li>
-								<img src="../../chuangkefiles/CKmicro_classroom/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
 								<p class="font_3 product_name">净匠—全净界空气净化器使用方法</p>
 								<p class="font_1 introduction">本课程旨在帮助销售人员</p>
 								<p class="font_1 introduction">全面了解此款空气净化剂详细使用方法</p>
 								<div class="font_1 p_d">
 									<div class="trademark">
-										<img src="../../chuangkefiles/CKmicro_classroom/logo.png"/>
+										<img src="/files/CKmicro_classroom/logo.png"/>
 										<span class="p">测试通过</span>
 									</div>
 									<div class="date font_5">发布时间：2017-06-10</div>
@@ -164,39 +164,39 @@
 					<div class="swiper-slide">
 						<ul class="box">
 							<li>
-								<img src="../../chuangkefiles/CKmicro_classroom/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
 								<p class="font_3 product_name">净匠—全净界空气净化器使用方法</p>
 								<p class="font_1 introduction">本课程旨在帮助销售人员</p>
 								<p class="font_1 introduction">全面了解此款空气净化剂详细使用方法</p>
 								<div class="font_1 p_d">
 									<div class="trademark">
-										<img src="../../chuangkefiles/CKmicro_classroom/logo.png"/>
+										<img src="/files/CKmicro_classroom/logo.png"/>
 										<span class="p">测试通过</span>
 									</div>
 									<div class="date font_5">发布时间：2017-06-10</div>
 								</div>
 							</li>
 							<li>
-								<img src="../../chuangkefiles/CKmicro_classroom/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
 								<p class="font_3 product_name">净匠—全净界空气净化器使用方法</p>
 								<p class="font_1 introduction">本课程旨在帮助销售人员</p>
 								<p class="font_1 introduction">全面了解此款空气净化剂详细使用方法</p>
 								<div class="font_1 p_d">
 									<div class="trademark">
-										<img src="../../chuangkefiles/CKmicro_classroom/logo.png"/>
+										<img src="/files/CKmicro_classroom/logo.png"/>
 										<span class="p">测试通过</span>
 									</div>
 									<div class="date font_5">发布时间：2017-06-10</div>
 								</div>
 							</li>
 							<li>
-								<img src="../../chuangkefiles/CKmicro_classroom/photo1.png" class="photo"/>
+								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
 								<p class="font_3 product_name">净匠—全净界空气净化器使用方法</p>
 								<p class="font_1 introduction">本课程旨在帮助销售人员</p>
 								<p class="font_1 introduction">全面了解此款空气净化剂详细使用方法</p>
 								<div class="font_1 p_d">
 									<div class="trademark">
-										<img src="../../chuangkefiles/CKmicro_classroom/logo.png"/>
+										<img src="/files/CKmicro_classroom/logo.png"/>
 										<span class="p">测试通过</span>
 									</div>
 									<div class="date font_5">发布时间：2017-06-10</div>
