--- a/src/main/webapp/Views/CKpersonal_center/registered.html
+++ b/src/main/webapp/Views/CKpersonal_center/registered.html
@@ -5,12 +5,12 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>个人中心</title>
 		<!--引入CSS-->
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/ckwx.css"/>
-		<link rel="stylesheet" type="text/css" href="../../chuangkestyles/CKpersonal_center/registered.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/ckwx.css"/>
+		<link rel="stylesheet" type="text/css" href="/styles/CKpersonal_center/registered.css"/>
 		<!--引入JS-->
-		<script src="../../chuangkescripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkescripts/layout.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../chuangkescripts/CKpersonal_center/registered.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/layout.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/scripts/CKpersonal_center/registered.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
 		<div id="wrap">
@@ -68,20 +68,20 @@
 					<p class="titles">身份证信息</p>
 					<ul>
 						<li>
-							<input type="file" / class="file">
-							<img src="../../chuangkefiles/CKpersonal_center/sc.png" class="sc"/>
+							<input type="file"  class="file"/>
+							<img src="/files/CKpersonal_center/sc.png" class="sc"/>
 							<img src="" class="file_img"/>
 							<p class="text font_1">身份证正面照片</p>
 						</li>
 						<li class="margin_L">
-							<input type="file" / class="file">
-							<img src="../../chuangkefiles/CKpersonal_center/sc.png" class="sc"/>
+							<input type="file"  class="file"/>
+							<img src="/files/CKpersonal_center/sc.png" class="sc"/>
 							<img src="" class="file_img"/>
 							<p class="text font_1">身份证反面照片</p>
 						</li>
 						<li class="margin_L">
-							<input type="file" / class="file">
-							<img src="../../chuangkefiles/CKpersonal_center/sc.png" class="sc"/>
+							<input type="file"  class="file"/>
+							<img src="/files/CKpersonal_center/sc.png" class="sc"/>
 							<img src="" class="file_img"/>
 							<p class="text font_1">手持身份证照片</p>
 						</li>
