--- a/src/main/webapp/Views/CKshouzhimignxi/shouzhiindex.html
+++ b/src/main/webapp/Views/CKshouzhimignxi/shouzhiindex.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>收支明细</title>
-    <link rel="stylesheet" type="text/css" href="../../chuangkestyles/ckwx.css"/>
-    <link rel="stylesheet" type="text/css" href="../../chuangkestyles/CKshouzhimingxi/shouzhiindex.css"/>
-	<script src="../../chuangkescripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../../chuangkescripts/layout.js"  type="text/javascript" charset="utf-8"></script>
-	<script src="../../chuangkescripts/CKshouzhimingxi/shouzhiindex.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="/styles/ckwx.css"/>
+    <link rel="stylesheet" type="text/css" href="/styles/CKshouzhimingxi/shouzhiindex.css"/>
+	<script src="/scripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/scripts/layout.js"  type="text/javascript" charset="utf-8"></script>
+	<script src="/scripts/CKshouzhimingxi/shouzhiindex.js" type="text/javascript" charset="utf-8"></script>
 
 </head>
 
@@ -26,7 +26,7 @@
 			<div class="shozhitige">
 				<div class="font_4 shouzhi_title" onclick="openindex(this)">
 					<span class="shouzhi_left">付款</span>
-					<span class="shouzhi_right"><img  src="../../chuangkefiles/CKshouzhimingxi/down.png"/></span>
+					<span class="shouzhi_right"><img  src="/files/CKshouzhimingxi/down.png"/></span>
 				</div>
 				<table border="0" cellpadding="0" cellspacing="0" class="font_3 conter_table">
 					<tr>
@@ -51,7 +51,7 @@
 			<div class="shozhitige" >
 				<div class="font_4 shouzhi_title" onclick="openindex(this)">
 					<span class="shouzhi_left">发货</span>
-					<span class="shouzhi_right"><img  src="../../chuangkefiles/CKshouzhimingxi/down.png"/></span>
+					<span class="shouzhi_right"><img  src="/files/CKshouzhimingxi/down.png"/></span>
 				</div>
 				<table border="0" cellpadding="0" cellspacing="0" class="font_3 conter_table">
 					<tr>
