--- a/src/main/webapp/Views/CKchuangkequan/share.html
+++ b/src/main/webapp/Views/CKchuangkequan/share.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href=/styles/CKchuangkequan/share.css"/>
 	<script src="/scripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/scripts/swiper-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/scripts/chuangkescripts/layout.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/scripts/layout.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/scripts/CKchuangkequan/share.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
