--- a/src/main/webapp/Views/CKpersonal_center/registered.html
+++ b/src/main/webapp/Views/CKpersonal_center/registered.html
@@ -92,7 +92,7 @@
 			<div class="btn font_4">注册</div>
 			<div class="ht">
 				<span class="font_5">我已阅读并接受创客宣言</span>
-				<input type="checkbox" name="" id="" value="" />
+				<input type="checkbox" name="" id="" value="" checked="checked"/>
 			</div>
 		</div>
 	</body>
