--- a/src/main/webapp/Views/CKchuangkequan/share.html
+++ b/src/main/webapp/Views/CKchuangkequan/share.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>创客圈</title>
     <link rel="stylesheet" type="text/css" href="/styles/swiper-3.3.1.min.css"/>
-    <link rel="stylesheet" type="text/css" href=/styles/CKchuangkequan/share.css"/>
+    <link rel="stylesheet" type="text/css" href="/styles/CKchuangkequan/share.css"/>
 	<script src="/scripts/jquery-1.12.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/scripts/swiper-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/scripts/layout.js" type="text/javascript" charset="utf-8"></script>
