--- a/src/main/webapp/Views/CKpersonal_center/registered.html
+++ b/src/main/webapp/Views/CKpersonal_center/registered.html
@@ -15,7 +15,7 @@
 	<body>
 		<div id="wrap">
 			<div class="detail">
-				<ul class="font_3">
+				<ul class="font_6">
 					<li>
 						<div class="l_l">
 							<span class="label">创客姓名</span>
@@ -71,25 +71,25 @@
 							<input type="file"  class="file"/>
 							<img src="/files/CKpersonal_center/sc.png" class="sc"/>
 							<img src="" class="file_img"/>
-							<p class="text font_1">身份证正面照片</p>
+							<p class="text font_1">正面照片</p>
 						</li>
 						<li class="margin_L">
 							<input type="file"  class="file"/>
 							<img src="/files/CKpersonal_center/sc.png" class="sc"/>
 							<img src="" class="file_img"/>
-							<p class="text font_1">身份证反面照片</p>
+							<p class="text font_1">反面照片</p>
 						</li>
 						<li class="margin_L">
 							<input type="file"  class="file"/>
 							<img src="/files/CKpersonal_center/sc.png" class="sc"/>
 							<img src="" class="file_img"/>
-							<p class="text font_1">手持身份证照片</p>
+							<p class="text font_1">手持照片</p>
 						</li>
 					</ul>
 				</div>
 			</div>
 			<!--注册按钮-->
-			<div class="btn font_4">注册</div>
+			<div class="btn font_6">注册</div>
 			<div class="ht">
 				<span class="font_5">我已阅读并接受创客宣言</span>
 				<input type="checkbox" name="" id="" value="" checked="checked"/>
