--- a/src/main/webapp/styles/CKmicro_classroom/micro_classroom.css
+++ b/src/main/webapp/styles/CKmicro_classroom/micro_classroom.css
@@ -8,7 +8,7 @@ body{
 /*title部分*/
 .title{
 	width: 100%;
-	height: 0.92rem;
+	height: 1rem;
 	background: #fff;
 	box-sizing: border-box;
 	border: 1px #b5b5b5 solid;
@@ -24,7 +24,7 @@ body{
 	height: 100%;
 	box-sizing: border-box;
 	text-align: center;
-	line-height: 0.92rem;
+	line-height: 1rem;
 	float: left;
 	color: #505050;
 }
@@ -61,22 +61,23 @@ body{
 .photo{
 	display: block;
 	width: 100%;
+	height: 5.03rem;
 }
 .product_name{
 	width: 4.6rem;
-	margin: 0.2rem auto 0;
+	margin: 0.2rem auto 0.2rem;
 	color: #505050;
 	overflow: hidden;
 	white-space: nowrap;
-    text-overflow: ellipsis;
+	text-overflow: ellipsis;
 }
 .introduction{
 	width: 4.6rem;
 	margin: 0.02rem auto 0;
 	overflow: hidden;
 	white-space: nowrap;
-    text-overflow: ellipsis;
-    color: #505050;
+	text-overflow: ellipsis;
+	color: #505050;
 }
 .p_d{
 	width: 4.6rem;
@@ -84,30 +85,31 @@ body{
 	overflow: hidden;
 }
 .trademark{
-	width: 1.9rem;
-    height: 0.5rem;
-    min-height: 19px;
-    min-width: 80px;
-    background: #76bcf0;
-    border-radius: 0.03rem;
-    color: #fff;
-    float: left;
+	width: 2.2rem;
+	height: 0.6rem;
+	min-height: 19px;
+	min-width: 80px;
+	background: #76bcf0;
+	border-radius: 0.03rem;
+	color: #fff;
+	float: left;
 }
 .trademark img{
 	width: 0.3rem;
-    min-width: 12px;
-    position: relative;
-    top: 0.1rem;
-    left: 0.18rem;
+	min-width: 12px;
+	position: relative;
+	top: 0.1rem;
+	left: 0.18rem;
 }
 .trademark .p{
 	position: relative;
 	top: 0.05rem;
 	left: 0.16rem;
-	
+
 }
 .date{
 	clear: both;
 	line-height: 0.5rem;
 	color: #a0a0a0;
+	padding-top: 0.1rem;
 }
