--- a/src/main/webapp/styles/CKpersonal_center/registered.css
+++ b/src/main/webapp/styles/CKpersonal_center/registered.css
@@ -7,10 +7,9 @@ body{
 }
 /*详情信息*/
 .detail{
-	width: 9.88rem;
 	background: #fafafa;
 	box-shadow: 0px 0px 0.04rem rgba(0,0,0,0.5);
-	margin: 0.2rem auto;
+	margin: 0.2rem 0.2rem 0;
 }
 .detail ul{
 	width: 96%;
@@ -46,10 +45,9 @@ body{
 }
 /*身份证*/
 .sfz{
-	width: 9.88rem;
 	background: #fafafa;
 	box-shadow: 0px 0px 0.04rem rgba(0,0,0,0.5);
-	margin: 0.2rem auto;
+	margin: 0.2rem 0.2rem 0;
 }
 .box{
 	width: 96%;
