--- a/src/main/webapp/styles/CKmy_territory/my_territory.css
+++ b/src/main/webapp/styles/CKmy_territory/my_territory.css
@@ -53,8 +53,7 @@ body{
 	margin-top: 0px;
 }
 .box{
-	width: 93%;
-	margin: 0.2rem auto 0;
+	margin: 0.2rem 0.2rem 0;
 	background: #fff;
 	box-shadow: 0px 0px 0.04rem rgba(0,0,0,0.5);
 }
