创客圈更换内容

--- a/src/main/webapp/Views/CKchuangkequan/share.html
+++ b/src/main/webapp/Views/CKchuangkequan/share.html
@@ -40,14 +40,14 @@
 							</ul>
 						</div>
 					
-						<p class="p_miaos">				
-								今天给一台宾利欧陆做了一次小保养，车主表示非常满意！	！
+						<p class="p_miaos">
+							感谢重庆西郊名车装饰美容中心陶总对怡人怡车的肯定和信任，果断加入怡人怡车健康中国行！
 						</p>
 						<ul class="ul_miaos" id="miaoshu">
-							<li><img src="/files/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
-							<li><img src="/files/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
-							<li><img src="/files/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
-							<li><img src="/files/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/fx1.jpg" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/fx2.jpg" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/fx3.jpg" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/fx5.jpg" onclick="fangda(this.src)"/></li>
 						</ul>
 			
 						<div class="plun">
@@ -79,13 +79,10 @@
 						</div>
 					
 						<p class="p_miaos">
-								今天给一台宾利欧陆做了一次小保养，车主表示非常满意！	！
+							感谢九州国际李总对怡人怡车健康中国行的大力支持！我承诺：使用合规、合法的车品，把真诚与健康带给员工与车主！
 						</p>
 						<ul class="ul_miaos" id="miaoshu">
-							<li><img src="/files/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
-							<li><img src="/files/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
-							<li><img src="/files/CKchuangkequan/img/photo1.png" onclick="fangda(this.src)"/></li>
-							<li><img src="/files/CKchuangkequan/img/photo2.png" onclick="fangda(this.src)"/></li>
+							<li><img src="/files/CKchuangkequan/img/fx4.jpg" onclick="fangda(this.src)"/></li>
 						</ul>
 			
 						<div class="plun">
