修改错别字

--- a/src/main/webapp/Views/CKchuangkequan/share.html
+++ b/src/main/webapp/Views/CKchuangkequan/share.html
@@ -52,7 +52,7 @@
 			
 						<div class="plun">
 							<span><img class="fengxiang" src="/files/CKchuangkequan/img/fengixnag.png"><font class="lileibie" id="fengxiang">分享</font></span>
-							<span><img class="zan" src="/files/CKchuangkequan/img/zan.png"><font class="lileibie" id="zan">攒</font></span>
+							<span><img class="zan" src="/files/CKchuangkequan/img/zan.png"><font class="lileibie" id="zan">赞</font></span>
 							<span><img class="ping" src="/files/CKchuangkequan/img/pinglun.png"><font class="lileibie" id="ping">评论</font></span>
 						    
 						</div>
@@ -87,7 +87,7 @@
 			
 						<div class="plun">
 							<span><img class="fengxiang" src="/files/CKchuangkequan/img/fengixnag.png"><font class="lileibie" id="fengxiang">分享</font></span>
-							<span><img class="zan" src="/files/CKchuangkequan/img/zan.png"><font class="lileibie" id="zan">攒</font></span>
+							<span><img class="zan" src="/files/CKchuangkequan/img/zan.png"><font class="lileibie" id="zan">赞</font></span>
 							<span><img class="ping" src="/files/CKchuangkequan/img/pinglun.png"><font class="lileibie" id="ping">评论</font></span>
 						</div>
 						
@@ -124,7 +124,7 @@
 			
 						<div class="plun">
 							<span><img class="fengxiang" src="/files/CKchuangkequan/img/fengixnag.png"><font class="lileibie" id="fengxiang">分享</font></span>
-							<span><img class="zan" src="/files/CKchuangkequan/img/zan.png"><font class="lileibie" id="zan">攒</font></span>
+							<span><img class="zan" src="/files/CKchuangkequan/img/zan.png"><font class="lileibie" id="zan">赞</font></span>
 							<span><img class="ping" src="/files/CKchuangkequan/img/pinglun.png"><font class="lileibie" id="ping">评论</font></span>
 						    
 						</div>
