--- a/src/main/webapp/Views/CKmicro_classroom/micro_classroom.html
+++ b/src/main/webapp/Views/CKmicro_classroom/micro_classroom.html
@@ -32,36 +32,16 @@
 					<div class="swiper-slide">
 						<ul class="box">
 							<li>
-								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
-								<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>
+								<img src="http://image.duduchewang.cn/YC000/networkclass/info/37_picture/1496917844910.jpg" class="photo"/>
+								<p class="font_4 product_name">怡人怡车健康中国行,开启车内健康新净界</p>
 								<div class="font_3 p_d">
 									<div class="trademark">
 										<img src="/files/CKmicro_classroom/logo.png"/>
 										<span class="p">测试通过</span>
 									</div>
-									<div class="date font_3">发布时间：2017-06-10</div>
-								</div>
-							</li>
-							<li>
-								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
-								<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>
-								<div class="font_3 p_d">
-									<div class="trademark">
-										<img src="/files/CKmicro_classroom/logo.png"/>
-										<span class="p">测试通过</span>
+									<div class="date font_3">时间：2017-06-07
+										<img src="/files/CKchuangkequan/img/fengixnag.png" alt="" class="fenxiang"/>
 									</div>
-									<div class="date font_3">发布时间：2017-06-10</div>
-								</div>
-							</li>
-							<li>
-								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
-								<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>
-								<div class="font_3 p_d">
-									<div class="trademark">
-										<img src="/files/CKmicro_classroom/logo.png"/>
-										<span class="p">测试通过</span>
-									</div>
-									<div class="date font_3">发布时间：2017-06-10</div>
 								</div>
 							</li>
 						</ul>
@@ -69,115 +49,115 @@
 					<!--学习中-->
 					<div class="swiper-slide">
 						<ul class="box">
-							<li>
-								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
-								<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>
-								<div class="font_3 p_d">
-									<div class="trademark">
-										<img src="/files/CKmicro_classroom/logo.png"/>
-										<span class="p">测试通过</span>
-									</div>
-									<div class="date font_3">发布时间：2017-06-10</div>
-								</div>
-							</li>
-							<li>
-								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
-								<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>
-								<div class="font_3 p_d">
-									<div class="trademark">
-										<img src="/files/CKmicro_classroom/logo.png"/>
-										<span class="p">测试通过</span>
-									</div>
-									<div class="date font_3">发布时间：2017-06-10</div>
-								</div>
-							</li>
-							<li>
-								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
-								<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>
-								<div class="font_3 p_d">
-									<div class="trademark">
-										<img src="/files/CKmicro_classroom/logo.png"/>
-										<span class="p">测试通过</span>
-									</div>
-									<div class="date font_3">发布时间：2017-06-10</div>
-								</div>
-							</li>
+							<!--<li>-->
+								<!--<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>-->
+								<!--<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>-->
+								<!--<div class="font_3 p_d">-->
+									<!--<div class="trademark">-->
+										<!--<img src="/files/CKmicro_classroom/logo.png"/>-->
+										<!--<span class="p">测试通过</span>-->
+									<!--</div>-->
+									<!--<div class="date font_3">发布时间：2017-06-10</div>-->
+								<!--</div>-->
+							<!--</li>-->
+							<!--<li>-->
+								<!--<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>-->
+								<!--<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>-->
+								<!--<div class="font_3 p_d">-->
+									<!--<div class="trademark">-->
+										<!--<img src="/files/CKmicro_classroom/logo.png"/>-->
+										<!--<span class="p">测试通过</span>-->
+									<!--</div>-->
+									<!--<div class="date font_3">发布时间：2017-06-10</div>-->
+								<!--</div>-->
+							<!--</li>-->
+							<!--<li>-->
+								<!--<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>-->
+								<!--<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>-->
+								<!--<div class="font_3 p_d">-->
+									<!--<div class="trademark">-->
+										<!--<img src="/files/CKmicro_classroom/logo.png"/>-->
+										<!--<span class="p">测试通过</span>-->
+									<!--</div>-->
+									<!--<div class="date font_3">发布时间：2017-06-10</div>-->
+								<!--</div>-->
+							<!--</li>-->
 						</ul>
 					</div>
 					<!--已完成-->
 					<div class="swiper-slide">
 						<ul class="box">
-							<li>
-								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
-								<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>
-								<div class="font_3 p_d">
-									<div class="trademark">
-										<img src="/files/CKmicro_classroom/logo.png"/>
-										<span class="p">测试通过</span>
-									</div>
-									<div class="date font_3">发布时间：2017-06-10</div>
-								</div>
-							</li>
-							<li>
-								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
-								<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>
-								<div class="font_3 p_d">
-									<div class="trademark">
-										<img src="/files/CKmicro_classroom/logo.png"/>
-										<span class="p">测试通过</span>
-									</div>
-									<div class="date font_3">发布时间：2017-06-10</div>
-								</div>
-							</li>
-							<li>
-								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
-								<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>
-								<div class="font_3 p_d">
-									<div class="trademark">
-										<img src="/files/CKmicro_classroom/logo.png"/>
-										<span class="p">测试通过</span>
-									</div>
-									<div class="date font_3">发布时间：2017-06-10</div>
-								</div>
-							</li>
+							<!--<li>-->
+								<!--<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>-->
+								<!--<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>-->
+								<!--<div class="font_3 p_d">-->
+									<!--<div class="trademark">-->
+										<!--<img src="/files/CKmicro_classroom/logo.png"/>-->
+										<!--<span class="p">测试通过</span>-->
+									<!--</div>-->
+									<!--<div class="date font_3">发布时间：2017-06-10</div>-->
+								<!--</div>-->
+							<!--</li>-->
+							<!--<li>-->
+								<!--<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>-->
+								<!--<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>-->
+								<!--<div class="font_3 p_d">-->
+									<!--<div class="trademark">-->
+										<!--<img src="/files/CKmicro_classroom/logo.png"/>-->
+										<!--<span class="p">测试通过</span>-->
+									<!--</div>-->
+									<!--<div class="date font_3">发布时间：2017-06-10</div>-->
+								<!--</div>-->
+							<!--</li>-->
+							<!--<li>-->
+								<!--<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>-->
+								<!--<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>-->
+								<!--<div class="font_3 p_d">-->
+									<!--<div class="trademark">-->
+										<!--<img src="/files/CKmicro_classroom/logo.png"/>-->
+										<!--<span class="p">测试通过</span>-->
+									<!--</div>-->
+									<!--<div class="date font_3">发布时间：2017-06-10</div>-->
+								<!--</div>-->
+							<!--</li>-->
 						</ul>
 					</div>
 					<!--我的收藏-->
 					<div class="swiper-slide">
 						<ul class="box">
-							<li>
-								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
-								<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>
-								<div class="font_3 p_d">
-									<div class="trademark">
-										<img src="/files/CKmicro_classroom/logo.png"/>
-										<span class="p">测试通过</span>
-									</div>
-									<div class="date font_3">发布时间：2017-06-10</div>
-								</div>
-							</li>
-							<li>
-								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
-								<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>
-								<div class="font_3 p_d">
-									<div class="trademark">
-										<img src="/files/CKmicro_classroom/logo.png"/>
-										<span class="p">测试通过</span>
-									</div>
-									<div class="date font_3">发布时间：2017-06-10</div>
-								</div>
-							</li>
-							<li>
-								<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>
-								<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>
-								<div class="font_3 p_d">
-									<div class="trademark">
-										<img src="/files/CKmicro_classroom/logo.png"/>
-										<span class="p">测试通过</span>
-									</div>
-									<div class="date font_3">发布时间：2017-06-10</div>
-								</div>
-							</li>
+							<!--<li>-->
+								<!--<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>-->
+								<!--<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>-->
+								<!--<div class="font_3 p_d">-->
+									<!--<div class="trademark">-->
+										<!--<img src="/files/CKmicro_classroom/logo.png"/>-->
+										<!--<span class="p">测试通过</span>-->
+									<!--</div>-->
+									<!--<div class="date font_3">发布时间：2017-06-10</div>-->
+								<!--</div>-->
+							<!--</li>-->
+							<!--<li>-->
+								<!--<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>-->
+								<!--<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>-->
+								<!--<div class="font_3 p_d">-->
+									<!--<div class="trademark">-->
+										<!--<img src="/files/CKmicro_classroom/logo.png"/>-->
+										<!--<span class="p">测试通过</span>-->
+									<!--</div>-->
+									<!--<div class="date font_3">发布时间：2017-06-10</div>-->
+								<!--</div>-->
+							<!--</li>-->
+							<!--<li>-->
+								<!--<img src="/files/CKmicro_classroom/photo1.png" class="photo"/>-->
+								<!--<p class="font_4 product_name">净匠—全净界空气净化器使用方法</p>-->
+								<!--<div class="font_3 p_d">-->
+									<!--<div class="trademark">-->
+										<!--<img src="/files/CKmicro_classroom/logo.png"/>-->
+										<!--<span class="p">测试通过</span>-->
+									<!--</div>-->
+									<!--<div class="date font_3">发布时间：2017-06-10</div>-->
+								<!--</div>-->
+							<!--</li>-->
 						</ul>
 					</div>
 				</div> <!--swiper-wrapper结束-->
