微课堂修改图片

--- a/src/main/webapp/Views/CKmicro_classroom/micro_classroom.html
+++ b/src/main/webapp/Views/CKmicro_classroom/micro_classroom.html
@@ -32,6 +32,7 @@
 					<div class="swiper-slide">
 						<ul class="box">
 							<li>
+								<img src="/files/CKmicro_classroom/zz.png" class="zc"/>
 								<img src="http://image.duduchewang.cn/YC000/networkclass/info/37_picture/1496917844910.jpg" class="photo"/>
 								<p class="font_4 product_name">怡人怡车健康中国行,开启车内健康新净界</p>
 								<div class="font_3 p_d">
