--- a/src/main/webapp/Views/CKpurchase/purchase.html
+++ b/src/main/webapp/Views/CKpurchase/purchase.html
@@ -52,19 +52,19 @@
 										<td class="td4">淄博远大汽车服务...</td>
 										<td class="td5">是</td>
 									</tr>
-									<tr>
+									<tr class="fou">
 										<td class="td1">2017-06-15</td>
 										<td class="td2">30000.00</td>
 										<td class="td3">2017-06-29</td>
 										<td class="td4">淄博远大汽车服务...</td>
-										<td class="td5">是</td>
+										<td class="td5">否</td>
 									</tr>
-									<tr>
+									<tr class="wei">
 										<td class="td1">2017-06-15</td>
 										<td class="td2">30000.00</td>
-										<td class="td3">2017-06-29</td>
-										<td class="td4">淄博远大汽车服务...</td>
-										<td class="td5">是</td>
+										<td class="td3"></td>
+										<td class="td4"></td>
+										<td class="td5"></td>
 									</tr>
 								</tbody>
 							</table>
