下一步跳转测试

--- a/src/main/webapp/Views/CKgrab_site/grab_site1.html
+++ b/src/main/webapp/Views/CKgrab_site/grab_site1.html
@@ -75,7 +75,7 @@
 				</ul>
 			</div><!--基本信息部分-->
 			<!--注册按钮-->
-			<div class="btn font_4 xyb">下一步</div>
+			<a href="/Views/CKgrab_site/grab_site2.html"><div class="btn font_4 xyb">下一步</div></a>
 		</div>
 	</body>
 </html>
