微营销添加分享按钮

--- a/src/main/webapp/Views/CKmicro_marketing/micro_marketing.html
+++ b/src/main/webapp/Views/CKmicro_marketing/micro_marketing.html
@@ -34,25 +34,33 @@
 								<img src="/files/CKmicro_marketing/photo2.png" class="photo"/>
 								<p class="font_4 product_name">爱洛汽车空间空调净化剂爱之...</p>
 								<p class="font_3 introduction">怡人怡车</p>
-								<p class="font_3 price">￥69.0</p>
+								<p class="font_3 price">￥69.0
+									<img src="/files/CKchuangkequan/img/fengixnag.png" alt="" class="fenxiang"/>
+								</p>
 							</li>
 							<li>
 								<img src="/files/CKmicro_marketing/photo2.png" class="photo"/>
 								<p class="font_4 product_name">爱洛汽车空间空调净化剂活力...</p>
 								<p class="font_3 introduction">怡人怡车</p>
-								<p class="font_3 price">￥69.0</p>
+								<p class="font_3 price">￥69.0
+									<img src="/files/CKchuangkequan/img/fengixnag.png" alt="" class="fenxiang"/>
+								</p>
 							</li>
 							<li>
 								<img src="/files/CKmicro_marketing/photo2.png" class="photo"/>
 								<p class="font_4 product_name">爱洛汽车空间空调净化剂本真...</p>
 								<p class="font_3 introduction">怡人怡车</p>
-								<p class="font_3 price">￥69.0</p>
+								<p class="font_3 price">￥69.0
+									<img src="/files/CKchuangkequan/img/fengixnag.png" alt="" class="fenxiang"/>
+								</p>
 							</li>
 							<li>
 								<img src="http://image.duduchewang.cn/CS000/wx/yangche/1497323659971/1497323663413.jpg" class="photo"/>
 								<p class="font_4 product_name">净匠汽车空间除醛魔方（全净..）</p>
 								<p class="font_3 introduction">怡人怡车</p>
-								<p class="font_3 price">￥99.0</p>
+								<p class="font_3 price">￥99.0
+									<img src="/files/CKchuangkequan/img/fengixnag.png" alt="" class="fenxiang"/>
+								</p>
 							</li>
 						</ul>
 					</div>
@@ -63,7 +71,9 @@
 								<img src="/files/CKmicro_marketing/photo1.png" class="photo"/>
 								<p class="font_4 product_name">净匠—全净界空气净化器</p>
 								<p class="font_3 introduction">为您的车内带来清新自然的空气</p>
-								<p class="font_3 price">￥88.88</p>
+								<p class="font_3 price">￥88.88
+									<img src="/files/CKchuangkequan/img/fengixnag.png" alt="" class="fenxiang"/>
+								</p>
 							</li>
 						</ul>
 					</div>
@@ -74,7 +84,9 @@
 								<img src="/files/CKmicro_marketing/photo2.png" class="photo"/>
 								<p class="font_4 product_name">爱洛汽车空间空调净化剂本真...</p>
 								<p class="font_3 introduction">怡人怡车</p>
-								<p class="font_3 price">￥69.0</p>
+								<p class="font_3 price">￥69.0
+									<img src="/files/CKchuangkequan/img/fengixnag.png" alt="" class="fenxiang"/>
+								</p>
 							</li>
 						</ul>
 					</div>
