收支明细添加是否接收信息

--- a/src/main/webapp/styles/CKshouzhimingxi/shouzhiindex.css
+++ b/src/main/webapp/styles/CKshouzhimingxi/shouzhiindex.css
@@ -22,7 +22,14 @@ body{
 	margin-top:0.46rem;*/
 	
 }
-
+table{
+	table-layout: fixed;
+}
+table .overflow{
+	overflow:hidden;
+	white-space:nowrap;
+	text-overflow:ellipsis;
+}
 .money_num{
 	color:#76bcf0;
 	margin:0rem 0rem 0rem 0.1rem;
