--- a/src/main/webapp/Views/CKshouzhimignxi/shouzhiindex.html
+++ b/src/main/webapp/Views/CKshouzhimignxi/shouzhiindex.html
@@ -56,22 +56,26 @@
 				<table border="0" cellpadding="0" cellspacing="0" class="font_3 conter_table">
 					<tr>
 						<td width="25%">日期</td>
-						<td width="50%">接收人</td>
+						<td width="40%">接收人</td>
+						<td width="8%">是否接收</td>
 						<td width="25%">金额</td>
 					</tr>
 					<tr >
 						<td>2017-05-18</td>
-						<td>淄博远大汽车服务有限公司</td>
+						<td class="overflow">淄博远大汽车服务有限公司</td>
+						<td width="6%">是</td>
 						<td>2858.00</td>
 					</tr>
 					<tr class="jiashou">
 						<td>2017-04-18</td>
-						<td>淄博远大汽车服务有限公司</td>
+						<td class="overflow">淄博远大汽车服务有限公司</td>
+						<td width="6%">否</td>
 						<td>1588.00</td>
 					</tr>
 					<tr>
 						<td>2017-03-18</td>
-						<td>淄博远大汽车服务有限公司</td>
+						<td class="overflow">淄博远大汽车服务有限公司</td>
+						<td width="6%">是</td>
 						<td>1888.00</td>
 					</tr>
 					
