--- a/src/main/webapp/Views/CKgrab_site/grab_site1.html
+++ b/src/main/webapp/Views/CKgrab_site/grab_site1.html
@@ -47,20 +47,18 @@
 						</div>
 					</li>
 					<li>
-						<span class="label">车牌前缀</span>
-						<input type="text" value="鲁A0001" name="cpqz" class="input width_2"/>
-					</li>
-					<li>
 						<span class="label">门店地址</span>
 						<input type="text" value="山东省济南市高新区顺泰广场2号楼3层B1" name="add" class="input width_2"/>
 						<img src="/files/CKgrab_site/dt.png" alt="" class="dt"/>
 					</li>
 					<li>
 						<div class="l_l">
-							<span class="label">门店类型</span>
-							<select name="mdlx" class="input width_1">
-								<option value="装潢美容">装潢美容</option>
-							</select>
+							<span class="label">经营范围</span>
+							<span class="jyfw"><input type="checkbox" name="" id="" value="" /><span>装饰</span></span>
+							<span class="jyfw"><input type="checkbox" name="" id="" value="" /><span>美容</span></span>
+							<span class="jyfw"><input type="checkbox" name="" id="" value="" /><span>养护</span></span>
+							<span class="jyfw"><input type="checkbox" name="" id="" value="" /><span>修理</span></span>
+							<span class="jyfw"><input type="checkbox" name="" id="" value="" /><span>改装</span></span>
 						</div>
 						
 					</li>
