--- a/src/main/webapp/styles/CKgrab_site/grab_site.css
+++ b/src/main/webapp/styles/CKgrab_site/grab_site.css
@@ -144,3 +144,11 @@ body{
 	float: right;
 	margin: 0.03rem;
 }*/
+.jyfw{
+	color: #959595;
+}
+.jyfw input{
+	position: relative;
+	top: 0.1rem;
+	width: 0.4rem;
+}
