--- a/src/main/webapp/styles/shopxiaofeijilu/css/xiaoFeiJiLu.css
+++ b/src/main/webapp/styles/shopxiaofeijilu/css/xiaoFeiJiLu.css
@@ -131,7 +131,8 @@ span{
 	line-height: 60px;
 	position: absolute;
 	top: 0px;
-	left: 75%;
+	/*left: 75%;*/
+	left: 50%;
 	margin-left: -90px;
 	box-sizing: border-box;
 	margin-bottom: 55px;
